Modernizer, code fixes and cleanups